
See also https://libreswan.org/

v5.1 (unreleased)
* building:
  - replace calloc(size,nr) with alloc_things(), fixing compile error [Daiki]
* whack:
  - ignore older whack as could trigger core dump [Andrew, github/1709]
* linux:
  - handle NLMSG_DONE at end of response (6.9.0-rc1) [Andrew, Ilya, github/1675]
  - fix hang when initiating an on-demand TCP connection [Daiki, github/1156]
* config:
  - verbosely ignore x-* style comments in config file [Andrew, github/1725]
* whack:
  - add --narrowing {yes,no}, retain undocumented --allow-narrowing [Andrew]

v5.0 (Apr 24, 2024)
* IKEv1:
  - globally disabled by default (ikev1-policy=drop); see RFC9395 [Daniel]
  - limit default cryptosuite [Andrew, Paul, Tuomo]
    IKE={AES_CBC,3DES_CBC}-{HMAC_SHA2_256,HMAC_SHA2_512HMAC_SHA1}-{MODP2048,MODP1536,DH19,DH31}
    ESP={AES_CBC,3DES_CBC}-{HMAC_SHA1_96,HMAC_SHA2_512_256,HMAC_SHA2_256_128}-{AES_GCM_16_128,AES_GCM_16_256}
    AH=HMAC_SHA1_96+HMAC_SHA2_512_256+HMAC_SHA2_256_128
  - remove support for Labeled IPsec [Andrew]
  - properly ignore dpdaction= [Andrew]
  - see also IKEv2 routing/revival changes
* IKEv2:
  - warn that fragmentation=force is ignored [Andrew]
  - avoid post-authentication crash on corrupt TS payload [Andrew]
  - support addresspool=v4/mask,v6/mask [Andrew]
  - support subnet=SELECTOR,... using a single Child SA [Andrew]
  - when non-MOBIKE never update NATed endpoint [#1492/Wofferl/Andrew]
  - fix revival of IKE_AUTH (first) Child SA [Andrew]
  - properly ignore dpdaction=, keyingtries= [Andrew]
  - when reviving, install trap then block [Andrew]
  - for auto=keep only retry once [Andrew]
  - when redirect fails, fall back to revival [Andrew]
* Linux:
  - HW packet offload support [Raed Salem <raeds@nvidia.com>,Paul]
  - XFRM interface IP management with ref-counting [Brady Johnson]
  - fix IPcomp with XFRM interfaces [Wolfgang]
* BSD:
  - fix esp=aes_gcm [github/1220, Igor V. Gubenko, Andrew]
* whack:
  - review ipsec-whack.8 [Tuomo, Andrew, Paul]