@@ -31,7 +31,6 @@ DISTRO_REL ?= 32	# default release
 
 D_USE_DNSSEC ?= false
 D_USE_NSS_IPSEC_PROFILE ?= false
-D_USE_NSS_AVA_COPY ?= true
 
 DOCKERFILE ?= $(D)/dockerfile
 
